# fastapi-k3s-test

./: Dockerfile  pyproject.toml
.github/workflows/: create-tag.yaml
