[project]
name = "python-example-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "a.dolgiy",email = "a.dolgiy@trueengineering.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "python_example_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
